A friend using a Nexus S with latest Android tried to video call me. I accepted the call but it failed to connect. I can't try to call him myself because of bug #36996
Created attachment 46470 [details] gabble log
Created attachment 61652 [details] gabble log trying to establish a call from an ICS tablet. This is a gabble log when attempting to establish a video call from an Android 4.0 tablet.
Created attachment 61786 [details] Gabble log from successful video call from Empathy to tablet
Video calling from Empathy to the ICS tablet actually works (after applying my patch for #44897, enabling a workaround for a/v caps for that client). I attached a gabble log from the call for reference.
I have commited a fix in this git repo: git://github.com/mlundblad/telepathy-gabble.git I have now tested video and audio calls both ways between Empathy and the tablet. Additionally I tried hanging up from the tablet and re-connect the video call from Empathy. One thing not tested though, are devices with Android 3.x. I have assumed the component name quirk is needed for both the Android GTalk node names.
Verified the patches from a galaxy SII just upgraded to ICS, which has the following bundle: http://www.android.com/gtalk/client/caps committed to git.
should the bug be closed since the patch is in gabble 0.16.1? http://cgit.freedesktop.org/telepathy/telepathy-gabble/commit/?h=telepathy-gabble-0.16&id=bced2f61312ab407964ac3ef0653183eb3b8c6cc
(In reply to comment #7) > should the bug be closed Yes. Thanks!
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.