Make Android 4.0 GTalk contacts appear as capable of a/v calls.

Reviewed-by: Sjoerd Simons <sjoerd@greynoise.nl>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=36998